make the xyz form disapear on submit and type dropdown appear

--- a/EFMRN2/MapMaker/index.html
+++ b/EFMRN2/MapMaker/index.html
@@ -125,7 +125,7 @@
     </form>
     
     
-    <label>
+    <label id="scrappydoo">
       <label for="type">Type of tile</label>
       <select name='type' id='type'>
         <option id="void">void</option>
